# net-logger

./: .dockerignore  .gitignore  Dockerfile  MANIFEST.in  README.md  RELEASE_NOTES.md  docker-compose.yml  install.ps1  install.py  install.sh  pyproject.toml
.github/workflows/: windows-installer.yml
docs/: API.md  DOCKER.md  FCC_DATABASE_API.md  INSTALLATION.md  INSTALLATION_FOR_DUMMIES.md  USER_GUIDE.md  WORDPRESS_PLUGIN.md  openapi.yaml
docs/plans/: 2026-06-16-kanban-net-logger-mvp.md
packaging/windows/: README.md  net-logger.iss  net-logger.spec  net_logger_launcher.py
src/net_logger/: __init__.py  app.py  cli.py  config.py  db.py  fcc_lookup.py  openapi.yaml  windows_launcher.py
src/net_logger/static/: app.js  index.html  reports.html  styles.css  user-guide.html
tests/: test_api.py  test_cli.py  test_config.py  test_distribution_artifacts.py  test_static_index.py  test_static_rendering.py  test_wordpress_plugin.py
wordpress-plugin/docs/sample-data/: net-logger-session.json  weekly-net-june-2026.json
wordpress-plugin/net-attendance-logger/: RELEASE_NOTES.md  net-attendance-logger.php  readme.txt
wordpress-plugin/net-attendance-logger/docs/: api.md  installation.md  reports.md  usage.md
wordpress-plugin/net-attendance-logger/includes/: class-activator.php  class-admin-controller.php  class-capabilities.php  class-db.php  class-importer.php  class-plugin.php  class-repository.php  class-rest-controller.php
wordpress-plugin/net-attendance-logger/public/css/: net-attendance.css
