[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "net-logger"
version = "0.1.0"
description = "Standalone amateur radio net logger with a two-column Kanban check-in board"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "Flask>=3.0",
]

[project.scripts]
net-logger = "net_logger.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
net_logger = ["static/*.html", "static/*.css", "static/*.js", "openapi.yaml"]
